# impacto

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  HorizonNX.toolchain  LICENSE  README.md  THIRDPARTY.md  VERSION  azure-pipelines.yml  baseconfig.lua  basepaths.lua  build-deps.ps1  gamedefinitions.lua  userconfig.lua  vcpkg-configuration.json  vcpkg.json
.github/workflows/: docker-switch.yml  impacto.yml  notify.yml  pipeline.yml  publish.yml
android/: .gitignore  README.md  build.gradle  gradle.properties  installDebug.bat
android/.run/: app.run.xml
android/app/: build.gradle  proguard-rules.pro  signing.gradle
doc/: contributor_guide.md  getting_started.md  ubuntu1804_build.md  ubuntu_build.md  vs2017_build.md  vs2019_build.md  vs_build.md
doc/font-lb/: CompoundCharacters.tbl  RobonoCharset.utf8  font-lb.md
docker/impacto-emscripten/: Dockerfile  build_emscripten.sh  libatrac9-emscripten.mk
docker/impacto-switch/: Dockerfile
impacto/: CMakeLists.txt  impacto.cpp  impacto.h
macos/: Impacto.plist.in
modules/: FindFFMPEG.cmake  FindLibatrac9.cmake  FindOggVorbis.cmake  FindWebP.cmake
portfiles/avcpp/: portfile.cmake  vcpkg.json
profiles/cc/: charset.js  dialogue.js  dialogue.lua  font.js  font.lua  game.js  game.lua  nametag.js  nametag.lua  savedata.js  savedata.lua  scriptvars.js  scriptvars.lua  sprites.js  sprites.lua  vfs.js  vfs.lua  waveeffects.lua
profiles/cclcc/: bgeff.lua  charset.lua  config.lua  configsystem.lua  dialogue.js  dialogue.lua  font-lb-italic.lua  font-lb.js  font-lb.lua  font.js  font.lua  game.js  game.lua  gamespecific.lua  mapsystem.lua  nametag.js  nametag.lua  savedata.js  savedata.lua  scriptinput.lua  scriptvars.js  scriptvars.lua  sprites.js  sprites.lua  subtitle.lua  tipssystem.lua  vfs.js  vfs.lua  yesnotrigger.lua
profiles/cclcc-switch/: game.lua  scriptvars.lua  sprites.lua  vfs.lua
profiles/characterviewer/: config.lua  game.js  game.lua
profiles/chlcc/: achievementsystem.js  achievementsystem.lua  charset.js  charset.lua  config.lua  dialogue.js  dialogue.lua  font-lb.js  font-lb.lua  font.js  font.lua  game.js  game.lua  gamespecific.lua  nametag.js  nametag.lua  savedata.js  savedata.lua  scriptinput.lua  scriptvars.js  scriptvars.lua  sprites.js  sprites.lua  subtitle.lua  tipssystem.js  tipssystem.lua  vfs.js  vfs.lua  waveeffects.lua
profiles/chn/: charset.lua  dialogue.js  dialogue.lua  font.js  font.lua  game.js  game.lua  savedata.lua  scriptvars.lua  sprites.js  sprites.lua  tipssystem.lua  vfs.js  vfs.lua
profiles/common/: achievementnotification.lua  animation.js  animation.lua  charset.lua  config.lua  init.js  nametag.js  nametag.lua  scriptinput.js  scriptinput.lua  scriptvars.js  scriptvars.lua
profiles/darling/: config.lua  dialogue.js  dialogue.lua  font.js  font.lua  game.js  game.lua  nametag.js  savedata.js  savedata.lua  scriptvars.js  sprites.js  sprites.lua  vfs.js  vfs.lua
profiles/dash/: charset.lua  dialogue.js  dialogue.lua  font.js  font.lua  game.js  game.lua  gamespecific.lua  nametag.js  nametag.lua  savedata.js  savedata.lua  scriptinput.lua  scriptvars.js  scriptvars.lua  sprites.js  sprites.lua  vfs.js  vfs.lua
profiles/mo6tw/: charset.js  charset.lua  dialogue.js  dialogue.lua  font.js  font.lua  game.js  game.lua  nametag.js  nametag.lua  savedata.js  savedata.lua  scriptinput.lua  scriptvars.js  scriptvars.lua  sprites.js  sprites.lua  tipssystem.js  tipssystem.lua  vfs.js  vfs.lua
profiles/mo7/: charset.js  charset.lua  config.lua  dialogue.js  dialogue.lua  font.js  font.lua  game.js  game.lua  nametag.js  nametag.lua  savedata.js  savedata.lua  scriptvars.lua  sprites.js  sprites.lua  tipssystem.js  vfs.js  vfs.lua
profiles/mo8/: charset.js  charset.lua  config.lua  dialogue.js  dialogue.lua  font-lb.js  font.js  font.lua  game.js  game.lua  nametag.js  nametag.lua  savedata.js  savedata.lua  scriptvars.lua  sprites.js  sprites.lua  vfs.js  vfs.lua
profiles/modelviewer/: game.js  game.lua
profiles/modelviewer-dash/: game.js  game.lua
profiles/rne/: animations.js  charset.js  charset.lua  config.lua  dialogue.js  dialogue.lua  font-lb.lua  font.js  font.lua  game.js  game.lua  gamespecific.lua  loadingdisplay.js  nametag.js  nametag.lua  savedata.js  savedata.lua  saveicon.js  sprites.js  sprites.lua  vfs.js  vfs.lua
profiles/sg/: config.lua  dialogue.lua  font.lua  game.lua  nametag.lua  savedata.lua  vfs.lua
profiles/sghd/: charset.lua  config.lua  dialogue.lua  game.lua  savedata.lua  scriptvars.lua  sprites.lua  tipssystem.lua  vfs.lua
profiles/sgps3/: charset.js  charset.lua  dialogue.js  dialogue.lua  font.js  font.lua  game.js  game.lua  nametag.lua  savedata.js  savedata.lua  scriptvars.js  scriptvars.lua  sprites.js  sprites.lua  vfs.js  vfs.lua
src/: animation.cpp  animation.h  background2d.cpp  background2d.h  basegame.cpp  basegame.h  camera.cpp  camera.h  character2d.cpp  character2d.h  character3d.cpp  character3d.h  characterviewer.cpp  characterviewer.h  config.h.in  configsystem.cpp  configsystem.h  datedisplay.cpp  debugmenu.cpp  debugmenu.h  externalfont.cpp  font.h  game.cpp  game.h  glc.h  gxtloader.cpp  gxtloader.h  impacto.h  inputsystem.cpp  inputsystem.h  linuxdesktop.cpp  linuxdesktop.h  loadable.h  loadingdisplay.cpp  loadingdisplay.h  log.cpp  log.h  main.cpp  manifest_windows.manifest  mask2d.cpp  (+48 more)
src/3d/: animation.cpp  animation.h  background3d.cpp  background3d.h  camera.cpp  camera.h  character3d.cpp  character3d.h  model.cpp  model.h  modelanimator.cpp  modelanimator.h  renderable3d.cpp  renderable3d.h  scene.cpp  scene.h  transform.cpp  transform.h
src/audio/: adxaudiostream.cpp  adxaudiostream.h  atrac9audiostream.cpp  atrac9audiostream.h  audiobackend.h  audiochannel.cpp  audiochannel.h  audiocommon.h  audiostream.cpp  audiostream.h  audiosystem.cpp  audiosystem.h  buffering.h  ffmpegaudioplayer.h  hcaaudiostream.cpp  (+5 more)
triplets/: arm64-android-ci.cmake  arm64-osx-ci.cmake  x64-linux-ci.cmake  x64-osx-ci.cmake
webdemo/: index.html  test.html  webdemo-responsive.css
(+1108 files in other folders)
